# wireCAM

./: .gitignore  CMakeLists.txt  README.md  REAME.md  Slice.C  Slice.h  Splitter.C  Splitter.h  SurfaceNormalSplitter.C  SurfaceNormalSplitter.h  TargetSurface.C  TargetSurface.h  unittest.C
include/: 3DSlice.h  AlphaJumpMarker.h  CNCMachine.h  EdgeSlice.h  Marker.h  NormalCrossingHorizontalMarker.h  PathTree.h  Pocket.h  PocketCornerSlice.h  PocketEdgeSlice.h  PointToPointDistanceMarker.h  PostProcessor.h  RoundWireSlice.h  Slice.h  Slice3D.h  Splitter.h  SplitterFactory.h  SurfaceNormalSplitter.h  TargetSurface.h  TemplateEngine.h  TraverseAngleSplitter.h  WorkingBoxSplitter.h
scripts/: PostSetter.py  WireToGCode.py
src/: 3DSlice.C  AlphaJumpMarker.C  EdgeSlice.C  NormalCrossingHorizontalMarker.C  PathTree.C  Pocket.C  PocketCornerSlice.C  PointToPointDistanceMarker.C  PostProcessor.C  RoundWireSlice.C  Slice.C  Slice3D.C  Splitter.C  SplitterFactory.C  SurfaceNormalSplitter.C  TargetSurface.C  TemplateEngine.C  TraverseAngleSplitter.C  WorkingBoxSplitter.C  wireCAM.C
test/: AlphaModulationTests.C  PocketTests.C  RoundWireTests.C  fullStack.json  pocket.json  pocketFace.brep  pocketFace2.brep  roundWire.json  simple.json  single_surface.STEP  unittest.C
